--- a/index.html
+++ b/index.html
@@ -8,24 +8,46 @@
 </head>
 <body>
     <header id="header">
-        <img src="" alt="Company logo" id="header-img">
+        <a href="#">
+            <img src="img/logo.png" alt="Company logo" id="header-img">
+        </a>
         <nav id="nav-bar">
             <ul>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
-                <li class="nav-link"><a href="#"></a></li>
+                <li class="nav-link">
+                    <a href="#">Advantages</a>
+                </li>
+                <li class="nav-link">
+                    <a href="#">What will you do with it?</a>
+                </li>
+                <li class="nav-link">
+                    <a href="#">What will you pay for it?</a>
+                </li>
             </ul>
         </nav>
     </header>
 
-    <video src="" id="video">
-        <source src="" type="">
-    </video>
+    <main id="main">
+        <video src="" id="video">
+            <source src="" type="">
+        </video>
+    
+        <form action="https://www.freecodecamp.com/email-submit" id="form">
+            <h3>Leave your email and we will sell you the true stylish look</h3>
+            <input
+                type="email"
+                name="email"
+                id="email"
+                placeholder="Type email here"
+                pattern="[-.\w]+@([\w-]+\.)+\w+"
+                size="30"
+            >
+            <input
+                type="submit"
+                id="submit"
+                value="Got it!"
+            >
+        </form>
+    </main>
 
-    <form action="https://www.freecodecamp.com/email-submit" id="form">
-        <input type="email" name="email" id="email"
-            placeholder="Enter your email" pattern="[-.\w]+@([\w-]+\.)+\w+">
-            <input type="submit" id="submit" value="Submit">
-    </form>
 </body>
 </html>
